[package]
name = "spacetracker"
version = "0.1.0"
authors = ["Spencer Krum <nibz@spencerkrum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", features=["blocking"]}
serde = {version="1", features=["derive"]}
serde_json = "1"

